<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popUpBackground" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/authorname"
        android:id="@+id/textView"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help"
        android:id="@+id/textView2"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version"
        android:id="@+id/textView3"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/copyright"
        android:id="@+id/textView4"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center" />
</RelativeLayout>


