<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.website.whatsfordinner.MainScreen">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whatsfordinner"
        android:src="@drawable/mainlogo"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0, 1, 2, 3"
        android:layout_below="@id/whatsfordinner">

        <!--First Table row for Groceries and Meals Images-->
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/groceries"
                android:layout_height="150dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/grocery"
                android:gravity="right"
                android:adjustViewBounds="true"
                android:src="@drawable/groceries"
                android:onClick="groceriesShow" />

            <ImageView
                android:id="@+id/meals"
                android:layout_height="150dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/meal"
                android:gravity="right"
                android:adjustViewBounds="true"
                android:src="@drawable/meals"
                android:onClick="mealsShow" />
        </TableRow>

        <!--Second Table Row for Groceries and Meals Label-->
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/grocerieslabel"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/grocery"
                android:gravity="center"
                android:onClick="groceriesShow"
                android:text="@string/grocery" />

            <TextView
                android:id="@+id/mealslabel"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/meal"
                android:gravity="center"
                android:onClick="mealsShow"
                android:text="@string/meal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="20dp">

            <ImageView
                android:id="@+id/newdish"
                android:layout_height="130dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/newdish"
                android:gravity="right"
                android:adjustViewBounds="true"
                android:src="@drawable/newdish"
                android:onClick="newdishShow" />

            <ImageView
                android:id="@+id/recipes"
                android:layout_height="130dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/recipes"
                android:gravity="right"
                android:adjustViewBounds="true"
                android:src="@drawable/recipes"
                android:onClick="recipesShow" />
        </TableRow>

        <!--Fourth Table Row for New Dish and Meals Label-->
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/newdishlabel"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/grocery"
                android:gravity="center"
                android:onClick="newdishShow"
                android:text="@string/newdish" />

            <TextView
                android:id="@+id/recipeslabel"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/meal"
                android:gravity="center"
                android:onClick="recipesShow"
                android:text="@string/recipes" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
